--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.qcloudsms</groupId>
+      <artifactId>qcloudsms</artifactId>
+      <version>1.0.5</version>
+    </dependency>
   </dependencies>
 
   <build>
