--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
       <artifactId>qcloudsms</artifactId>
       <version>1.0.5</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.13.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
